--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -6,6 +6,7 @@ conan_basic_setup()
 
 add_executable(example example.cpp)
 target_link_libraries(example ${CONAN_LIBS})
+set_property(TARGET example PROPERTY CXX_STANDARD 11)
 
 # CTest is a testing tool that can be used to test your project.
 # enable_testing()
