Update pip on travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
 - sudo apt-get install -qq g++-4.9
 - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
 
+# Upgrade pip
+- pip install --upgrade pip
 
 # Install conan
 - pip install conan
