Added travis CI with conan options.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,44 @@
-language: cpp
-compiler:
-- gcc
+
+env:
+   global:
+     - CONAN_REFERENCE: "rttr/0.9.6"
+     - CONAN_USERNAME: "user"
+     - CONAN_LOGIN_USERNAME: "user"
+     - CONAN_CHANNEL: "channel"
+     
+linux: &linux
+   os: linux
+   dist: xenial
+   sudo: required
+   language: python
+   python: "3.6"
+   services:
+     - docker
+osx: &osx
+   os: osx
+   language: generic
+matrix:
+   include:
+
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=conanio/gcc49
+
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=conanio/gcc5
+
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=conanio/gcc6
+
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=conanio/gcc7
+
+      - <<: *linux
+        env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/gcc8
+
 install:
-# Upgrade GCC
-- sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-- sudo apt-get update -qq
-- sudo apt-get install -qq g++-4.9
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
-
-# Install SSL
-- apt-get install libffi-dev libssl-dev
-
-# Upgrade pip
-- pip install requests[security]
-- pip install --upgrade pip
-
-# Install conan
-- pip install conan
-# Automatic detection of your arch, compiler, etc.
-- conan user
+  - chmod +x .travis/install.sh
+  - ./.travis/install.sh
 
 script:
-# Download dependencies, build, test and create package
-- conan create . user/testing
+  - chmod +x .travis/run.sh
+  - ./.travis/run.sh
