--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 
 env:
    global:
-     - CONAN_REFERENCE: "rttr/0.9.6"
+     - CONAN_REFERENCE: "rttr/latest"
      - CONAN_USERNAME: "user"
      - CONAN_LOGIN_USERNAME: "user"
      - CONAN_CHANNEL: "channel"
