--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ build: false
 environment:
     PYTHON: "C:\\Python37"
 
-    CONAN_REFERENCE: "rttr/latest"
+    CONAN_REFERENCE: "rttr/b3a131c"
     CONAN_USERNAME: "user"
     CONAN_LOGIN_USERNAME: "user"
     CONAN_CHANNEL: "channel"
